--- a/src/js/views/offers/new.html
+++ b/src/js/views/offers/new.html
@@ -11,7 +11,7 @@
   <textarea rows="4" cols="90" name="comment" ng-model="offersNew.offer.body">.</textarea><br>
 
   <label for="image">Image</label>
-  <input type="file" id="image" name="image" ng-model="offersNew.offer.base64"><br>
+  <input base64 type="file" id="image" name="image" ng-model="offersNew.offer.base64"><br>
 
   <label for="value">value</label>
   <input type="number" id="value" name="value" ng-model="offersNew.offer.value">
