updated the views to work with image_src

--- a/src/js/views/adverts/show.html
+++ b/src/js/views/adverts/show.html
@@ -17,7 +17,7 @@
     <h3>{{ offer.title }}</h3>
     {{ offer.body }}
     <h4>Price: £{{ offer.value }}</h4>
-    <image class="thumbnail" src="{{ offer.image }}"></image>
+    <image class="thumbnail" src="{{ offer.image_src }}"></image>
     <a ng-click="advertsShow.messagesNew(offer, advertsShow.advert)"><button>Contact this seller</button></a>
   </div>
 </div>
