--- a/src/js/views/messages/new.html
+++ b/src/js/views/messages/new.html
@@ -6,7 +6,7 @@
     <h3>{{ messagesNew.offer.title }}</h3>
     {{ messagesNew.offer.body }}
     <h4>Price: £{{ messagesNew.offer.value }}</h4>
-    <image class="thumbnail" src="{{ messagesNew.offer.image }}"></image>
+    <image class="thumbnail" src="{{ messagesNew.offer.image_src }}"></image>
   </div>
 
   <div class="outline">
