--- a/src/js/views/offers/edit.html
+++ b/src/js/views/offers/edit.html
@@ -4,7 +4,7 @@
   <strong>Title </strong>{{ offersEdit.offer.title }}<br>
   <strong>Body </strong>{{ offersEdit.offer.body }}<br>
   <strong>Price: £ </strong>{{ offersEdit.offer.value}}.<br>
-  <img class="thumbnail" ng-src="{{ offersEdit.offer.image }}">
+  <img class="thumbnail" ng-src="{{ offersEdit.offer.image_src }}">
 </div>
 <!-- {{ offersEdit.offer }} -->
 
@@ -18,7 +18,7 @@
   </p>
   <p>
     <label for="image">Image</label>
-    <input type="text" id="image" name="image" ng-model="offersEdit.offer.image">
+    <input base64 type="file" id="image" name="image" ng-model="offersEdit.offer.base64">
   </p>
   <label for="value">valueMax</label>
   <input type="number" id="valueMax" name="valueMax" ng-model="offersEdit.offer.value">
