--- a/src/js/views/offers/search.html
+++ b/src/js/views/offers/search.html
@@ -10,7 +10,7 @@
       <strong>Title </strong>{{ offer.title }}<br>
       <!-- <strong>Body </strong>{{ offer.body }}<br> -->
       <strong>Price: £ </strong>{{ offer.value }}.<br>
-      <img class="thumbnail" ng-src="{{ offer.image }}" alt="thumbnail"><br>
+      <img class="thumbnail" ng-src="{{ offer.image_src }}" alt="thumbnail"><br>
 
       <button>More Details</button>
     </div>
