--- a/src/js/views/offers/show.html
+++ b/src/js/views/offers/show.html
@@ -1,12 +1,17 @@
 <h1></h1>
 
 <div class="outline">
-  <h1>Your Offer</h1>
+  <!-- <h1>Your Offer</h1> -->
   <!-- {{ offersShow.offer }}<br> -->
-  <strong>Title </strong>{{ offersShow.offer.title }}<br>
-  <strong>Body </strong><div ng-bind-html="offersShow.offer.html_body"></div><br>
-  <strong>Price: £ </strong>{{ offersShow.offer.value }}.<br>
-  <img class="thumbnail" ng-src="{{ offersShow.offer.image_src }}">
+  <h3>{{ offersShow.offer.title }}</h3>
+  <img class="showImage" ng-src="{{ offersShow.offer.image_src }}">
+  <div class="description">
+    <h3>Description</h3>
+    <hr>
+    <div ng-bind-html="offersShow.offer.html_body"></div><br>
+    <strong>Price: £ </strong>{{ offersShow.offer.value }}.<br>
+  </div>
+
   <!-- {{ offersShow.offer.user_id }} ++ {{ offersShow.currentUser.id }} or {{ offersShow.currentUser.id }} -->
   <button ui-sref="offersEdit({id: offersShow.offer.id})" ng-if="offersShow.offer.user_id === offersShow.currentUser.id">Edit</button>
 
