--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -135,3 +135,10 @@ header {
 // a:active {
 //     text-decoration: underline;
 // }
+.price {
+  float: right;
+}
+
+.showImage {
+  width: 100%;
+}
