--- a/src/js/views/auth/register.html
+++ b/src/js/views/auth/register.html
@@ -1,25 +1,29 @@
-<div class="row">
+<!--  -->
+
+<div class="loginContainer">
   <form ng-submit="auth.register()">
     <div>
       <label>Username</label>
-      <input type="text" ng-model="auth.user.username">
+      <input class="loginFormInput" type="text" ng-model="auth.user.username">
     </div>
 
     <div>
       <label>Email</label>
-      <input type="text" ng-model="auth.user.email">
+      <input class="loginFormInput" type="text" ng-model="auth.user.email">
     </div>
 
     <div>
       <label>Password</label>
-      <input type="password" ng-model="auth.user.password">
+      <input class="loginFormInput" type="password" ng-model="auth.user.password">
     </div>
 
     <div>
       <label>Password Confirmation</label>
-      <input type="password" ng-model="auth.user.password_confirmation">
+      <input class="loginFormInput" type="password" ng-model="auth.user.password_confirmation">
     </div>
 
-    <button>Register</button>
+    <button class="loginFormButton" >Register</button>
   </form>
+  <div class="midline">Or</div>
+  <div class="oAuthButton">Sign in with Google</div>
 </div>
