--- a/src/js/views/offers/show.html
+++ b/src/js/views/offers/show.html
@@ -1,20 +1,43 @@
-<h1></h1>
+<!-- <h1>offers Show</h1> -->
 
-<div class="outline">
-  <!-- <h1>Your Offer</h1> -->
-  <!-- {{ offersShow.offer }}<br> -->
-  <h3>{{ offersShow.offer.title }}</h3>
-  <span class="price"><strong>Price: £ </strong>{{ offersShow.offer.value }}.</span><br>
-  <img class="showImage" ng-src="{{ offersShow.offer.image_src }}">
 
-  <div class="description">
-    <h3>Description</h3>
-    <hr>
-    <div ng-bind-html="offersShow.offer.html_body"></div><br>
+<div class="itemsShow">
+
+  <div class="banner">
   </div>
 
-  <!-- {{ offersShow.offer.user_id }} ++ {{ offersShow.currentUser.id }} or {{ offersShow.currentUser.id }} -->
-  <button ui-sref="offersEdit({id: offersShow.offer.id})" ng-if="offersShow.offer.user_id === offersShow.currentUser.id">Edit</button>
+  <h3>{{ offersShow.offer.title }}</h3>
+  <span class="price">£{{ offersShow.offer.value }}</span><br>
+
+  <div class="clearfix">
+    <div class="item">
+      <img class="showImage" ng-src="{{ offersShow.offer.image_src }}">
+      <div class="description">
+        <h3>Description</h3>
+        <hr>
+        <div ng-bind-html="offersShow.offer.html_body"></div><br>
+      </div>
+      <!-- {{ offersShow.offer.user_id }} ++ {{ offersShow.currentUser.id }} or {{ offersShow.currentUser.id }} -->
+      <div class="editButton" ui-sref="offersEdit({id: offersShow.offer.id})" ng-if="offersShow.offer.user_id === offersShow.currentUser.id">
+        This is your advert, click here to edit it
+      </div>
+    </div>
+    <div class="right">
+      <div class="owner">
+
+        owner
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+    <div class="banner">
+    </div>
 
 </div>
 <!-- <div class="results">
