--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -170,7 +170,6 @@ header {
     color: $white;
     background: $searchButton;
     transition: background 0.5s ease;
-
     &:hover {
       background: #733a3a;
     }
@@ -263,7 +262,54 @@ header {
 // itemShow page
 // **************************
 
-
+.itemsShow {
+  background: $white;
+  padding: 5px 30px;
+  .banner {
+    height: 100px;
+    width: 100%;
+  }
+  .price {
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .item {
+    width: 60%;
+    float: left;
+    .showImage {
+      box-sizing: border-box;
+      padding: 50px 3px 20px 3px;
+      border: 1px solid $listShowBorder;
+    }
+  }
+  .right {
+    box-sizing: border-box;
+    width: 40%;
+    padding-left: 25px;
+    float: left;
+    background: inherit;
+    .owner {
+      background: blue;
+    }
+  }
+  .editButton { // so far identical to loginFormButton
+    text-align: center;  // change
+    padding: 0;
+    margin: 0;
+    border: 0;
+    font-size: 16px;
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    margin: 8px auto;
+    color: $white;
+    background: $searchButton;
+    transition: background 0.5s ease;
+    &:hover {
+      background: #733a3a;
+    }
+  }
+}
 
 
 // for messages that appear on the users profile page
