--- a/src/js/views/offers/show.html
+++ b/src/js/views/offers/show.html
@@ -6,15 +6,17 @@
   <div class="banner">
   </div>
 
-  <h3>{{ offersShow.offer.title }}</h3>
-  <span class="price">£{{ offersShow.offer.value }}</span><br>
+
 
   <div class="clearfix">
     <div class="item">
+      <div class="showTitle">{{ offersShow.offer.title }}</div>
+      <div class="price">£{{ offersShow.offer.value }}</div>
       <img class="showImage" ng-src="{{ offersShow.offer.image_src }}">
       <div class="description">
         <h3>Description</h3>
         <hr>
+        <!-- // ng-bind is used because we are sending back html from the markdown parser -->
         <div ng-bind-html="offersShow.offer.html_body"></div><br>
       </div>
       <!-- {{ offersShow.offer.user_id }} ++ {{ offersShow.currentUser.id }} or {{ offersShow.currentUser.id }} -->
@@ -24,30 +26,18 @@
     </div>
     <div class="right">
       <div class="owner">
-
-        owner
-      </div>
+        <h2>Owner</h2>
+        <hr>
+        <h2>Contact Details</h2>
+        <h2>Tel. 01326 123 123</h2>
+        <div class="editButton" ui-sref="offersEdit({id: offersShow.offer.id})">
+          Email
+        </div>
     </div>
   </div>
 
+  <div class="banner">
+  </div>
 
-
-
-
-
-
-    <div class="banner">
-    </div>
-
+  </div>
 </div>
-<!-- <div class="results">
-  <h1>Matching Results</h1>
-  Filter by price -- Filter by distance
-  <div class="outline" ng-repeat="offer in offersShow.offers">
-    <h3>{{ offer.title }}</h3>
-    {{ offer.body }}
-    <h4>Price: £{{ offer.value }}</h4>
-    <image class="thumbnail" src="{{ offer.image }}"></image>
-    <a ng-click="offersShow.messagesNew(offer)"><button>Contact this seller</button></a>
-  </div>
-</div> -->
